test/org/midica/testfiles/failing/eff-func-wrong-param-count-3.midica
INCLUDE inc/instruments.midica


0: vol.set()
